2013-04-24 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/events/event_responses.editor.php: set the sizes of
	the widgets for the form in the metaconsole.
	
	Fixes: #3611423
	
	* godmode/users/configure_user.php

2013-04-24 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/tag/edit_tag.php: change the input text for textarea for
	large list of emails.
	
	Fixes: #3611473
	
	* pandoradb.sql: cleaned source code style.

2013-04-24 Miguel de Dios <miguel.dedios@artica.es>

	* operation/agentes/networkmap.topology.php: fixed the PHP
	notice in the enterprise Dashboard.
	
	Fixes: #3611685

2013-04-24 Miguel de Dios <miguel.dedios@artica.es>

	* operation/agentes/networkmap.php,
	include/functions_networkmap.php: set the background transparent.
	
	Fixes: #3611686
	
	* include/styles/pandora.css, include/functions_ui.php: fixed the
	tabs in the header when the tab is bigger that standar tab, and
	the separator doesn't print.

2013-04-24 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/planned_downtime.editor.php: fixed the header.
	
	Fixes: #3611687

2013-04-24 Miguel de Dios <miguel.dedios@artica.es>

	* mobile/operation/groups.php, mobile/operation/agents.php,
	mobile/operation/tactical.php, mobile/operation/alerts.php,
	mobile/operation/agent.php, mobile/operation/events.php,
	mobile/operation/module_graph.php, mobile/operation/modules.php,
	mobile/include/style/main.css: some fixes.
	
	* include/functions.php: erased the lost trace.
	
	* include/functions_graph.php: cleaned source code style.

2013-04-24  Sergio Martin <sergio.martin@artica.es>

	* godmode/servers/servers.build_table.php
	godmode/servers/modificar_server.php: Rewrite missed
	servers buttons in last huge merge. Add success/error
	messages on this actions

2013-04-23  Sergio Martin <sergio.martin@artica.es>

	* include/styles/dialog.css
	include/styles/images/dialog-titlebar-close.png
	include/styles/pandora.css
	include/ajax/events.php
	include/functions_events.php